--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,8 @@
 version: 2
 jobs:
   build:
+    docker:
+      - image: circleci/python:3.6.2-stretch-browsers
     steps:
       - run: python test.py
+      - run: python CalculerSalaire.py
